# notes

./: .gitignore  Android.md  Booklist.md  Contents.md  Experience.md  Language.md  Linux.md  Network.md  README.md  Tools.md
00-Code/: README.md
00-Code/C&C++/cmake-samples/Sample04/: CMakeLists.txt  main.c
00-Code/C&C++/cmake-samples/Sample04/Libs/: Lib.h
00-Code/C&C++/cmake-samples/Sample05_Check/: CMakeLists.txt  config.h.in  main.c
00-Code/C&C++/cmake-samples/Sample05_Check/Libs/: Lib.c
00-Code/DataStructure/DataStructure-c/: CMakeLists.txt  README.md
00-Code/DataStructure/DataStructure-c/list/: CircleLinkedList.h  LinkedList.h  SeqQueue.c  SeqQueue.h
00-Code/DataStructure/DataStructure-c/tree/: BinaryTree.c
Android/: README.md  References.md  Todo.md
Arch/: OOP.md  UML.md  依赖倒置原则.md
Basic/: 深入理解计算机操作系统01-计算机系统漫游.md  编程语言概述.md
BuildTools/: README.md
C&CPP/: README.md
C-CPP/: README.md
CPP/: README.md
Code/: .gitignore
Code/Android/NDK/BionicAPI/app/: CMakeLists.txt
Code/Android/NDK/BionicAPI/app/src/main/cpp/: bionic-api.h  common.cpp
Code/Android/NDK/BionicAPI/app/src/main/java/com/ztiany/bionic/: AppContext.java
Code/Android/NDK/BionicAPI/app/src/main/java/com/ztiany/bionic/pthread/: PthreadActivity.java
Code/Android/NDK/BionicAPI/app/src/main/java/com/ztiany/bionic/tcpudp/: AbstractEchoActivity.java  EchoClientActivity.java  EchoServerActivity.java
Computer-Basic/: 02-编程语言概述.md  04-编程范式.md  Link_load_and_libraries.md  README.md  深入理解计算机操作系统-01-计算机系统漫游.md
Computer-System-Basic/: README.md
ComputerBasic/: Link_load_and_libraries.md  正斜杠与反斜杠.md  编程相关概念.md
ComputerBasicSience/: Base64编码.md  References.md  《深入了解计算机操作系统》00-导读.md  操作系统相关概念.md  编程范式.md
ComputerFoundation/: 编程范式.md
DSA/: README.md
DSA/00-Code/Play-with-Algorithms/: CMakeLists.txt  GraphMain.cpp
DSA/00-Code/Play-with-Algorithms/graph/: GraphTestHelper.h
DSA/00-Code/Play-with-Algorithms/heap/: IndexMaxHeapV2.h  MaxHeap.h
DSA/00-Code/Play-with-Algorithms/sort-basic/: MergeSort.h  SelectionSort.h
DSA/00-Code/Play-with-Algorithms/tools/: FileOps.h
DSA/00-Code/Play-with-Algorithms/union-find/: UnionFind3.h  UnionFind4.h  UnionFind5.h  UnionFindBase.h
DataStructure/: C1-复杂度分析.md  C2-数据结构.md  README.md  References.md  玩转数据结构00-概述.md  玩转数据结构01-数组.md  玩转数据结构01-线性结构.md  玩转数据结构02-栈.md  玩转数据结构02-树结构.md  玩转数据结构03-队列.md  玩转数据结构04-单向链表.md  玩转数据结构05-二分搜索树.md  玩转数据结构05-树结构.md  玩转数据结构06-set.md  玩转数据结构07-map.md  玩转数据结构08-优先队列与堆.md  玩转数据结构09-线段树.md  玩转数据结构10-Trie.md  玩转数据结构11-并查集.md  玩转数据结构12-AVL树.md  玩转数据结构13-红黑树.md  玩转数据结构14-哈希表.md
DataStructure-Algorithms/: README.md
Design-Patterns/: Concepts.md
Flutter/: README.md
Front-end/: README.md  References.md
Gradle/: Android-AndroidStudio&Gradle.md  Android-GradleForAndroid.md  Android-Gradle实践记录.md  Android-TransformAPI.md  Android-解决重复依赖的冲突.md  CI-Nexus仓库.md  Gradle-JavaPlugin.md  Gradle实战-06-Gradle构建脚本概要-1-Project.md  Gradle实战-07-Gradle构建脚本概要-2-Task.md  README.md
Groovy/: Groovy01-介绍.md  Groovy02-起步.md  Groovy03-面向Java开发者的Groovy.md  Groovy04-动态类型.md  Groovy05-闭包.md  README.md
Java/: README.md  Todo.md
JavaEE/: README.md  References.md
Kotlin/: Kotlin-Android-Lib-Kodein.md  Kotlin-Android-Practice.md  Kotlin-Android-开发实践.md  Kotlin01-基础语法.md  Kotlin04-Lambda编程.md  Kotlin07-委托.md  Kotlin09-与Java互操作.md  Kotlin10-反射.md  KotlinCoroutine01-Overview.md  KotlinCoroutine01-概述.md  KotlinCoroutine02-Guide.md  KotlinCoroutine02-Summary.md  KotlinCoroutine03-Practice.md  KotlinCoroutine03-Summary.md  Kotlin学习资料.md  (+10 more)
(+4557 files in other folders)
